--- a/ios/TvHub.xcodeproj/xcshareddata/xcschemes/TvHub.xcscheme
+++ b/ios/TvHub.xcodeproj/xcshareddata/xcschemes/TvHub.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "TvHub.app"
-               BlueprintName = "TvHub"
-               ReferencedContainer = "container:TvHub.xcodeproj">
+               BuildableName = "MeinTV.app"
+               BlueprintName = "MeinTV"
+               ReferencedContainer = "container:MeinTV.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "TvHubTests.xctest"
-               BlueprintName = "TvHubTests"
-               ReferencedContainer = "container:TvHub.xcodeproj">
+               BuildableName = "MeinTVTests.xctest"
+               BlueprintName = "MeinTVTests"
+               ReferencedContainer = "container:MeinTV.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TvHub.app"
-            BlueprintName = "TvHub"
-            ReferencedContainer = "container:TvHub.xcodeproj">
+            BuildableName = "MeinTV.app"
+            BlueprintName = "MeinTV"
+            ReferencedContainer = "container:MeinTV.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TvHub.app"
-            BlueprintName = "TvHub"
-            ReferencedContainer = "container:TvHub.xcodeproj">
+            BuildableName = "MeinTV.app"
+            BlueprintName = "MeinTV"
+            ReferencedContainer = "container:MeinTV.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
