--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TvHub",
+  "name": "MeinTV",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native/new-app-screen": "0.81.0",
     "react": "19.1.0",
     "react-native": "npm:react-native-tvos@0.81.0-0",
-    "@react-native/new-app-screen": "0.81.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
